--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,10 @@ ol {
   list-style: none;
 }
 
-#logo-principal{
+#logo-principal {
   text-align: center;
 }
-#logo-principal img{
+#logo-principal img {
   max-height: 80px;
 }
 
@@ -41,12 +41,12 @@ ol {
   z-index: 99;
   transition: 0.4s;
 }
-.efecto-banner{
+.efecto-banner {
   box-shadow: 0 2px 2px rgb(0 0 0 / 15%);
-  -moz-box-shadow: 0 2px 2px rgba(0,0,0,.15);
+  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
   /* -webkit-box-shadow: 0 2px 2px rgb(0 0 0 / 15%); */
-  -ms-box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  -o-box-shadow: 0 2px 2px rgba(0,0,0,.15);
+  -ms-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  -o-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
 }
 ul.nav {
   width: 100%;
@@ -108,6 +108,7 @@ ul.nav li ul li ul {
 
 section#about-us .titulo,
 section#service .titulo,
+section#processes .titulo,
 section#projects .titulo,
 section#customers .titulo,
 section#contact .titulo {
@@ -118,8 +119,29 @@ section#contact .titulo {
   margin: 4% 0% 1% 0;
   color: #000000;
 }
+/*Section - Nosotros*/
 
-/*Section Nuestros Servicios*/
+section#about-us .row{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-items: center;
+}
+section#about-us .content-texto{
+  display: flex;
+  align-items: center;
+}
+section#about-us .texto p{
+  text-align: justify;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #000000;
+
+}
+/**/
+/*Section - Nuestros Servicios*/
 section#service .description {
   text-align: center;
   font-family: "Raleway", sans-serif;
@@ -134,7 +156,7 @@ section#service .description {
   justify-content: center;
   margin: 3.5% 0;
 }
-.list-name-of-service>div{
+.list-name-of-service > div {
   margin: 1.5% 0;
 }
 .list-name-of-service a {
@@ -145,54 +167,148 @@ section#service .img-service > img {
   margin: 0 auto;
 }
 
-section#service .inf-service h3{
+section#service .inf-service h3 {
   font-family: "Raleway", sans-serif;
   margin: 2% 0;
   font-size: 20px;
   font-weight: 600;
 }
 /**/
+/*Section - Nuestros Procesos*/
+
+#processes .row{
+  padding-bottom: 80px;
+}
+#processes article {
+  position: relative;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+#processes .numero {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #2a83f9;
+  display: inline-block;
+  line-height: 50px;
+  font-weight: 700;
+  color: #fff;
+  margin: 0 0 30px;
+  z-index: 3;
+}
+#processes .texto {
+  position: relative;
+  margin: 40px auto;
+  max-width: 260px;
+  width: 100%;
+  z-index: 3;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  color: #000000;
+}
+#processes .texto h3{
+  font-family: "Raleway", sans-serif;
+  font-weight: 900;
+  color: #000000;
+}
+#processes article .punto {
+  width: 10px;
+  height: 10px;
+  background-color: #2a83f9;
+  border-radius: 50%;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: -45px;
+  z-index: 3;
+}
+
+#processes article:nth-child(1):before,
+#processes article:nth-child(2):before,
+#processes article:nth-child(4):before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  border-top: 1px dashed #c3cad0;
+  right: 0;
+  top: 40px;
+  background-color: #fff;
+  z-index: 2;
+  height: 100%;
+}
+
+#processes article:nth-child(2):after,
+#processes article:nth-child(3):before,
+#processes article:nth-child(5):after,
+#processes article:nth-child(6):after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  border-top: 1px dashed #c3cad0;
+  left: 0;
+  top: 40px;
+  background-color: #fff;
+  z-index: 2;
+  height: 100%;
+}
+
+#processes article:nth-child(3):after,
+#processes article:nth-child(4):after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 1px dashed #c3cad0;
+  left: 0;
+  top: 40px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/**/
 
 /*Contactenos*/
-#contact{
-   background-image: url('../images/contactenos/fondo.jpg');
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position:top;
-   position: relative;
+#contact {
+  background-image: url("../images/contactenos/fondo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  position: relative;
 }
-#contact::before{
-  content:'';
-	position: absolute;
+#contact::before {
+  content: "";
+  position: absolute;
   top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0,0,0,0.6);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6);
 }
-section#contact>.container{
+section#contact > .container {
   position: relative;
   z-index: 9;
 }
-section#contact .titulo{
+section#contact .titulo {
   color: #ffffff;
 }
-section#contact .container-section{
+section#contact .container-section {
   margin-top: 5%;
 }
-section#contact .datos-contacto{
+section#contact .datos-contacto {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-section#contact .datos-contacto li{
+section#contact .datos-contacto li {
   margin-bottom: 10px;
   color: #ffffff;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 16px;
 }
-section#contact .mensaje-contact{
+section#contact .mensaje-contact {
   font-size: 16px;
   color: #ffffff;
   font-family: "Raleway", sans-serif;
@@ -200,46 +316,46 @@ section#contact .mensaje-contact{
   text-align: justify;
   margin-bottom: 5%;
 }
-#form-enviar{
-   background-color: #2a83f9;
-    border: 1px solid #2a83f9;
-    color: #fff!important;
-    padding: 10px 35px;
+#form-enviar {
+  background-color: #2a83f9;
+  border: 1px solid #2a83f9;
+  color: #fff !important;
+  padding: 10px 35px;
 }
 /*Footer*/
-#footer .titulo h4{
+#footer .titulo h4 {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 25px;
   margin: 10% 0;
   color: #2a83f9;
 }
-#footer ul{
+#footer ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-#footer ul li{
+#footer ul li {
   margin-bottom: 10px;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 16px;
   color: #8495ad;
 }
-#footer ul li a{
+#footer ul li a {
   color: #8495ad;
 }
 
-.redes-sociales{
-  margin: 20px -5px 0!important;
+.redes-sociales {
+  margin: 20px -5px 0 !important;
   list-style: none;
   padding: 0;
 }
-.redes-sociales li{
+.redes-sociales li {
   display: inline-block;
   padding: 0 5px;
 }
-.redes-sociales li a{
+.redes-sociales li a {
   display: block;
   background-color: #2a83f9;
   width: 40px;
@@ -252,19 +368,19 @@ section#contact .mensaje-contact{
   font-size: 20px;
 }
 
-#footer .content-footer{
+#footer .content-footer {
   border-top: 1px solid #e9ebfe;
   padding: 40px 0;
 }
-#footer .content-footer p{
+#footer .content-footer p {
   text-align: center;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 18px;
   color: #8495ad;
 }
-#footer .content-footer p>strong{
-  color:#2a83f9;
+#footer .content-footer p > strong {
+  color: #2a83f9;
 }
 /*Fin*/
 
